사용자 입력값을 리스트뷰에 출력

--- a/app/src/main/res/layout/chat_list_item.xml
+++ b/app/src/main/res/layout/chat_list_item.xml
@@ -11,11 +11,11 @@
         android:layout_height="wrap_content"
         android:padding="10dp"/>
 
-    <TextView
-        android:text="123"
-        android:id="@+id/myInput"
-        android:gravity="left"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"/>
+<!--    <TextView-->
+<!--        android:text="123"-->
+<!--        android:id="@+id/myInput"-->
+<!--        android:gravity="left"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:padding="10dp"/>-->
 </LinearLayout>
