--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:orientation="horizontal">
 
         <EditText
+            android:maxLength="3"
             android:id="@+id/inputEdt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
